--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "",
+	"token": "ODE2NjQ0MjU0NDg1OTcwOTg2.GTa9K5.yGqtx1fnAJdROFElt8aoANPM_3V4RxQ_yh66bY",
 	"default_prefix": ".",
 	"owner":"806409576534245377"
 }
